# summary_develop

./: README.md  electron_cnpm.txt  flutter_env.txt  其他经验.txt  零声学院 第9代 Linux CC++后台架构开发 成长体系课程 - v1_2.mht
个人经历/: readme.md
其他文档/: CMakeLists.txt  electron_cnpm.txt  其他经验.txt  日常汇总.cpp  读书记录.md  部分库编译，makefile修改.txt  零声学院 第9代 Linux CC++后台架构开发 成长体系课程 - v1_2.mht
现场问题反思/: readme.md
设计模式/: readme.md
设计模式/lijianzhong/Design-Mode-master/笔记/: 模板方法.md  面向对象设计原则.md
设计模式/lijianzhong/Design-Pattern-master/: README.md
设计模式/lijianzhong/Design-Pattern-master/Bridge（桥模式）/: README.md  bridge1.cpp
设计模式/lijianzhong/Design-Pattern-master/Decorator（装饰模式）/: README.md  decorator1.cpp  decorator2.cpp  decorator3.cpp
设计模式/lijianzhong/Design-Pattern-master/Factory-Method（工厂模式）/: FileSplitter.cpp  FileSplitter2.cpp  MainForm1.cpp  MainForm2.cpp  README.md  SplitterFactory.cpp
设计模式/lijianzhong/Design-Pattern-master/Observer (观察者模式)/: FileSplitter.cpp  FileSplitter1.cpp  FileSplitter2.cpp  MainForm.cpp  MainForm1.cpp  MainForm2.cpp  README.md
设计模式/lijianzhong/Design-Pattern-master/Singleton（单例模式）/: README.md  Singleton.cpp
设计模式/lijianzhong/Design-Pattern-master/Strategy（策略模式）/: README.md  strategy1.cpp  strategy2.cpp
设计模式/lijianzhong/Design-Pattern-master/Template-Method（模板方法）/: README.md  template1_app.cpp  template1_lib.cpp  template2_app.cpp  template2_lib.cpp
音视频后台开发/: readme.md
